# VH_Act

./: README.md  activator  activator.c  vhusbdarm64
VirtualHere/: install_server  vhusbdarm  vhusbdi386  vhusbdx86_64
dumps/: 1c_server_x64.json  50user.json
haspd/: haspd-modules_7.90-eter2ubuntu_amd64.deb  haspd_7.90-eter2ubuntu_amd64.deb
libusb_vhci/: COPYING  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
libusb_vhci/examples/: Makefile.am  Makefile.in  virtual_device.cpp  virtual_device2.c
libusb_vhci/m4/: expansions.m4
libusb_vhci/src/: Makefile.am  Makefile.in  hcd.cpp  libusb_vhci.c  libusb_vhci.h  local_hcd.cpp  port_stat.cpp  urb.cpp  work.cpp
vhci-hcd/: README  usb-vhci-hcd.c
